--- a/ListApp/app/src/main/res/layout/my_listview_detail.xml
+++ b/ListApp/app/src/main/res/layout/my_listview_detail.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent" android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/nameTextView"
+        android:id="@+id/timeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
@@ -11,14 +11,14 @@
         android:layout_marginStart="26dp"
         android:layout_marginTop="25dp"
         android:text="Name"
-        android:textSize="24sp" />
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/descriptionTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignStart="@+id/nameTextView"
-        android:layout_below="@+id/nameTextView"
+        android:layout_alignStart="@+id/timeTextView"
+        android:layout_below="@+id/timeTextView"
         android:text="Description" />
 
     <TextView
